--- a/Programming.html
+++ b/Programming.html
@@ -8,6 +8,8 @@
   <meta name="CocoaVersion" content="1404.47">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 18.0px; font: 15.0px '.AppleSystemUIFont'; color: #373a3c; -webkit-text-stroke: #373a3c}
+    p.p2 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 18.0px; font: 15.0px '.AppleSystemUIFont'; color: #373a3c; -webkit-text-stroke: #373a3c; background-color: #ffffff}
+    p.p3 {margin: 0.0px 0.0px 12.0px 0.0px; line-height: 18.0px; font: 15.0px '.AppleSystemUIFont'; color: #373a3c; -webkit-text-stroke: #373a3c; background-color: #ffffff; min-height: 18.0px}
     span.s1 {font-kerning: none; background-color: #ffffff}
     span.s2 {font-kerning: none}
   </style>
@@ -22,7 +24,42 @@
 </span><span class="s1">&lt;body&gt;</span><span class="s2"><br>
 </span><span class="s1">&lt;script type="application/processing"&gt;</span><span class="s2"><br>
 <br>
-</span><span class="s1">&lt;!--paste your entire processing code here--&gt;</span></p>
+</span><span class="s1">&lt;!--void setup() {</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>size(500,500);</span></p>
+<p class="p2"><span class="s2">}</span></p>
+<p class="p2"><span class="s2">void draw() {</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space">   </span>background(199,226,255);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>//balloon</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>line(mouseX,mouseY,mouseX,mouseY-100);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>fill(0,255,0);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>ellipse(mouseX,mouseY-100,50,50);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>fill(0,0,255);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>ellipse(mouseX-10,mouseY-70,50,50);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>fill(255,0,0);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>ellipse(mouseX-30,mouseY-105,50,50);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>//face</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>fill(255,255,255);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>ellipse(250,200,120,150);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>//hat</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>fill(0,0,0);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>ellipse(250,130,110,10);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>fill(0,0,0);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>rect(223,77,57,57);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>//eyes</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>fill(0,0,0);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>circle(220,170,10);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>circle(280,170,10);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>//nose</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>fill(0,0,0);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>circle(250,190,10);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>//mouth</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>fill(0,0,0);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>arc(250, 220, 80, 80, 0, PI, CHORD);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>//sun</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>fill(255,204,0);</span></p>
+<p class="p2"><span class="s2"><span class="Apple-converted-space"> </span>ellipse(50,50,70,70);</span></p>
+<p class="p3"><span class="s2"><span class="Apple-converted-space"> </span></span></p>
+<p class="p2"><span class="s2">}--&gt;</span></p>
 <p class="p1"><span class="s1">&lt;/script&gt;</span><span class="s2"><br>
 </span><span class="s1">&lt;canvas data-processing-sources=“Atlasonface.pde” &gt; &lt;/canvas&gt;</span><span class="s2"><br>
 </span><span class="s1">&lt;/body&gt;</span><span class="s2"><br>
